# mimapr

./: .gitignore  CMakeLists.txt
include/: cholesky.hpp  colormap.hpp  conjugate_gradient.hpp  gauss.hpp  matrix.hpp  node.hpp  sparse_matrix.hpp
src/: main.cpp  test.cpp
